<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/pitchmainscreen"
    tools:context="ie.darren_sisk.fantasyfootballdraft.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/login_name"
        android:hint="@string/username"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/login_and_register_fields_border"
        android:textColor="#010000"
        android:textColorHint="#FFCFCBCB"
        android:paddingLeft="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_password"
        android:hint="@string/password"
        android:layout_below="@+id/login_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/login_name"
        android:layout_alignEnd="@+id/login_name"
        android:layout_marginTop="50dp"
        android:background="@drawable/login_and_register_fields_border"
        android:textColor="#000000"
        android:textColorHint="#FFCFCBCB"
        android:paddingLeft="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/bnLogin"
        android:layout_below="@+id/login_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/login_password"
        android:layout_alignEnd="@+id/login_password"
        android:layout_marginTop="75dp"
        android:background="@drawable/home_buttons"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newAccount"
        android:id="@+id/tvRegister"
        android:layout_below="@+id/bnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="20dp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainName"
        android:id="@+id/appName"
        android:layout_alignBottom="@+id/login_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp"
        android:textSize="32dp"
        android:textColor="#000000"
        android:textStyle="bold" />
</RelativeLayout>
